tests/baselines/reference/propertyAssignmentUseParentType2.errors.txt
tests/cases/conformance/salsa/propertyAssignmentUseParentType2.js(11,14): error TS2322: Type '{ (): boolean; nuo: 1000; }' is not assignable to type '{ (): boolean; nuo: 789; }'.
  Types of property 'nuo' are incompatible.
    Type '1000' is not assignable to type '789'.


==== tests/cases/conformance/salsa/propertyAssignmentUseParentType2.js (1 errors) ====
    /** @type {{ (): boolean; nuo: 789 }} */
    export const inlined = () => true
    inlined.nuo = 789
    
    /** @type {{ (): boolean; nuo: 789 }} */
    export const duplicated = () => true
    /** @type {789} */
    duplicated.nuo = 789
    
    /** @type {{ (): boolean; nuo: 789 }} */
    export const conflictingDuplicated = () => true
                 ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ (): boolean; nuo: 1000; }' is not assignable to type '{ (): boolean; nuo: 789; }'.
!!! error TS2322:   Types of property 'nuo' are incompatible.
!!! error TS2322:     Type '1000' is not assignable to type '789'.
    /** @type {1000} */
    conflictingDuplicated.nuo = 789
    